# Scaffold

./: .gitignore  Project.cmake  README.md
Assistant/: CMakeLists.txt  _NOTE.md
Assistant/Src/: FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h  ProgramSingleton.cpp  ProgramSingleton.h  Setup.cpp  Setup.h  TextTemplate.cpp  TextTemplate.h  main.cpp
CMakeExternals/: CMakeLists.txt  _NOTE.md  curl.cmake  curl.cmake.bak  cxxopt.cmake  egl-registry.cmake  glfw.cmake  glm.cmake  grpc.cmake  imgui.cmake.bak  opengl-registry.cmake  vulkan.cmake  vulkan.cmake.bak
CMakeUtilities/: CMakeLists.txt  Directory.cmake  Library.cmake  Source.cmake  String.cmake  _NOTE.md
Scripts/: CreateStaticLibrary.bat  ExcuteAssistant.bat  _NOTE.md
Template/: LibraryAPI.h
